--- a/boostrap.html
+++ b/boostrap.html
@@ -15,7 +15,9 @@
 
     <div class="container-fluid">
         <div class="row bg-warning text-center">
+            <div class="col">
             Header
+            </div>
         </div>
         <div class="container">
             <div class="row">
@@ -57,8 +59,12 @@
             <div class="col-md-3 bg-info">NAV </div>
                 
                 <div class="col">
-                        <div class="row bg-light">Contenido</div>
-                        <div class="row bg-success">Footer</div>
+                        <div class="row bg-secondary">
+                            <div class="col">Contenido</div>
+                        </div>
+                        <div class="row bg-success">
+                            <div class="col">Footer</div>
+                        </div>
                </div>   
         </div>
     </div>
@@ -66,20 +72,32 @@
 <p>Ejercicio 3</p>
 
     <div class="container-fluid text-center">
-        <div class="row bg-danger">Logo</div>
-        <div class="row bg-warning ">Nav</div>
-        <div class="row bg-success ">Header</div>
+        <div class="row bg-danger">
+            <div class="col">Logo</div>
+        </div>
+        <div class="row bg-warning ">
+            <div class="col">Nav</div>
+        </div>
+        <div class="row bg-success ">
+            <div class="col">Header</div>
+    </div>
         <div class="row ">
             <div class="col-md-3 bg-primary">Sidebar</div>
             <div class="col-md-9 bg-secondary">Contenido</div>
         </div>
-        <div class="row bg-danger">Footer</div>
+        <div class="row bg-danger">
+            <div class="col">footer</div>
+        </div>
     </div>
 <p>Ejercicio 4</p>
 
     <div class="container-fluid">
-        <div class="row bg-warning">Header</div>
-        <div class="row bg-danger">Banner</div>
+        <div class="row bg-warning">
+            <div class="col">Header</div>
+        </div>
+        <div class="row bg-danger">
+            <div class="col">Banner</div>
+        </div>
         <div class="container bg-dark">
             <div class="row">
                 <div class="col-md-3 bg-primary">1</div>
@@ -87,7 +105,7 @@
                 <div class="col-md-3 bg-primary">3</div>
                 <div class="col-md-3 bg-secondary">4</div>
             </div>
-            <div class="row bg-primary">
+            <div class="row">
                 <div class="col-md-3 bg-secondary">1</div>
                 <div class="col-md-3 bg-primary">2</div>
                 <div class="col-md-3 bg-secondary">3</div>
@@ -101,19 +119,25 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 ">Caja1</div>
+            <div class="col-md-4 bg-warning">Caja1</div>
             <div class="col-md-4 bg-danger">Caja2</div>
-            <div class="col-md-4 ">Caja3</div>
+            <div class="col-md-4 bg-warning">Caja3</div>
         </div>
-        <div class="row bg-danger"> Footer</div>
+        <div class="row bg-danger"> 
+            <div class="col">footer</div>
+        </div>
     </div>
 
     <p>Ejercicio5</p>
     <div class="container-fluid">
         <div class="container">
-            <div class="row bg-danger">Header</div>
+            <div class="row bg-danger">
+                <div class="col">Header</div>
+            </div>
         </div>
-        <div class="row bg-warning">NAV</div>
+        <div class="row bg-warning">
+            <div class="col">Nav</div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-7 bg-primary">Foto</div>
@@ -129,7 +153,9 @@
                 <div class="col-md-9 bg-secondary">Banner</div>
             </div>
         </div>
-        <div class="row bg-warning">Footer</div>
+        <div class="row bg-warning">
+            <div class="col">Footer</div>
+        </div>
     </div>
 
 
