--- a/Inicio.html
+++ b/Inicio.html
@@ -30,6 +30,9 @@
                             <label for="exampleInputEmail1" class="form-label">Usuario</label>
                             <input type="Usuario" class="form-control" placeholder="User" aria-label="User">
                         </div>
+                        <div class="col-md-12 d-grid">
+                            <button class="boton" type="button">Log In</button>
+                        </div>       
                     </div>
                 </div>
             </div>    
