--- a/Inicio.html
+++ b/Inicio.html
@@ -18,12 +18,14 @@
                 </div>
             
                 <div class="col-md-6  derecha">
-                    
-                    <div m-5> <!--Margin Booststrap-->
-                        <img src="img/cet30.png" class="rounded mx-auto d-block" id="logo" alt="logo-cet30"> <!--Imagen Responsive-->
-                    </div>
+                    <div class="col-md-12"> 
+                        <div m-5> <!--Margin Booststrap-->
+                            <img src="img/cet30.png" class="rounded mx-auto d-block" id="logo" alt="logo-cet30"> <!--Imagen Responsive-->
+                        </div>
+                    </div> 
+                    <div class="col-md-12"> 
                         <h1 class="text-center">Ingresar Al Campus</h1>
-                        <p class="text-center">Ingresar sesion en la institucion <a href="https://campus.cet30.edu.ar/login/index.php">CET30</a></p>
+                    </div> 
                     <div class="row">
                         <div class="col-md-3" id="clave">
                             <label for="exampleInputPassword1" class="form-label">Clave</label>
@@ -33,8 +35,9 @@
                             <label for="exampleInputEmail1" class="form-label">Usuario</label>
                             <input type="Usuario" class="form-control" placeholder="User" aria-label="User">
                         </div>
-                        <div class="col-md-12 d-grid">
-                            <button class="boton" type="button">Log In</button>
+                        <div class="col-md-12 d-grid"> <!--Display Grid-->
+                            <button class="boton m-3" type="button">Log In</button>
+                            <p class="text-center m-5">Ingresar sesion en la institucion <a href="https://campus.cet30.edu.ar/login/index.php">CET30</a></p>
                         </div>       
                     </div>
                 </div>
