--- a/Inicio.html
+++ b/Inicio.html
@@ -18,22 +18,24 @@
                 </div>
             
                 <div class="col-md-6  derecha">
-                    <div class="col-md-12"> 
-                        <div m-5> <!--Margin Booststrap-->
-                            <img src="img/cet30.png" class="rounded mx-auto d-block" id="logo" alt="logo-cet30"> <!--Imagen Responsive-->
-                        </div>
-                    </div> 
-                    <div class="col-md-12"> 
-                        <h1 class="text-center">Ingresar Al Campus</h1>
-                    </div> 
+                    <div class="row">
+                        <div class="col-md-12"> 
+                            <div m-5> <!--Margin Booststrap-->
+                                <img src="img/cet30.png" class="rounded mx-auto d-block" id="logo" alt="logo-cet30"> <!--Imagen Responsive-->
+                            </div>
+                        </div> 
+                        <div class="col-md-12"> 
+                            <h1 class="text-center">Ingresar Al Campus</h1>
+                        </div> 
+                    </div>
                     <div class="row">
                         <div class="col-md-3" id="clave">
                             <label for="exampleInputPassword1" class="form-label">Clave</label>
-                            <input type="Clave" class="form-control" placeholder="Password" aria-label="Password">
+                            <input type="password" class="form-control" placeholder="Password" aria-label="Password">
                         </div>
                         <div class="col-md-3" id="usuario">
                             <label for="exampleInputEmail1" class="form-label">Usuario</label>
-                            <input type="Usuario" class="form-control" placeholder="User" aria-label="User">
+                            <input type="text" class="form-control" placeholder="User" aria-label="User">
                         </div>
                         <div class="col-md-12 d-grid"> <!--Display Grid-->
                             <button class="boton m-3" type="button">Log In</button>
