--- a/Inicio.html
+++ b/Inicio.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     
-        <div class="container">
+        <div class="container fondo">
             <div class="row vh-100">
                 <div class="col-md-6 d-none d-md-block bloque"> <!--d-none, en breakpoint desaparece la columna, md-block ocupa todo el espacio -->
                 </div>
