--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -66,7 +66,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <footer class="py-3 my-4">
+                <footer class=" my-4">
                     <p>Creado por:Sandoval Brian</p>
                     <p>En: Cet30</p>
                 </footer>
