--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -56,7 +56,33 @@
             </div>
             <div class="row  text-center">
                 <div class="col-md-6  text-center abajo">
-                    <img src="img/335006-space-supernova.jpg" class="img-fluid foto" alt="Supnernova-photo"> 
+                  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/335006-space-supernova.jpg" class="d-block w-100 foto" alt="First-Supernova">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/250px-Keplers_supernova.jpg" class="d-block w-100 foto" alt="Second-Supernova">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/20200413040940.jpg" class="d-block w-100 foto" alt="Third-Supernova">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Siguiente</span>
+                    </button>
+                  </div>
+                   
                 </div>
                 <div class="col-md-6 text-center abajo">
                     <p class="texto m-5">Una supernova (del latín nova, «nueva») es una explosión estelar que puede manifestarse de forma muy notable en el espacio, incluso a simple vista, en lugares de la esfera celeste donde antes no se había detectado nada en particular. Por esta razón, a eventos de esta naturaleza se los llamó inicialmente stellae novae («estrellas nuevas») o simplemente novae. Con el tiempo se hizo la distinción entre fenómenos aparentemente similares pero de luminosidad intrínseca muy diferente; los menos luminosos continuaron llamándose novae (novas), en tanto que el término supernova fue acuñado por Walter Baade y Fritz Zwicky en 1931 para denominar a los más luminosos agregándoles el prefijo «super-».
