--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -55,7 +55,7 @@
                 
             </div>
             <div class="row  text-center">
-                <div class="col-md-6  text-center abajo">
+                <div class="col-md-6  text-center abajo p-5">
                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
