--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -11,10 +11,11 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container-fluid expand">
-      <header>
+    <div class="container-fluid">
+      
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 p-0 m-0">
+              <header>
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <div class="container-fluid">
                           <a class="navbar-brand" href="https://www.nasa.gov/"><img src="img/nasa-logo.svg" class="img-fluid" alt="Nasa-logo"></a>
@@ -24,10 +25,10 @@
                           <div class="collapse navbar-collapse navi" id="navbarNav">
                             <ul class="navbar-nav">
                               <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link" href="#">Home</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Informacion</a>
+                                <a class="nav-link " href="#">Informacion</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Proyectos</a>
@@ -38,10 +39,10 @@
                             </ul>
                           </div>
                         </div>
-                     </nav>
+                     </nav>   
               </div>
+            </header>
           </div>
-          </header>
         </div>
         <div class="container fondo">
             <div class="row">
