--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -25,16 +25,16 @@
                           <div class="collapse navbar-collapse navi" id="navbarNav">
                             <ul class="navbar-nav">
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="m-1" href="#">Home</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link " href="#">Informacion</a>
+                                <a class="m-1" href="#">Informacion</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Proyectos</a>
+                                <a class="m-1" href="#">Proyectos</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#" >Curiosidades</a>
+                                <a class="m-1" href="#" >Curiosidades</a>
                               </li>
                             </ul>
                           </div>
